threadId to getId